--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 <body>
 	
 <h1>My Awesome Headline</h1>
-<p>hulalalalalla</p>
+<p>hulalalalalla paraAGRRAPH</p>
+<img src="../../a#3/DW HELP/imaages/spongegar.jpg" width="480" height="360" alt="spongegar portrait"/>
 	
-<img src="../../a#3/DW HELP/images/pepe.jpg" width="1200" height="1096" alt=""/>
 </body>
 </html>
